--- a/index.ejs
+++ b/index.ejs
@@ -1,17 +1,42 @@
 <!-- database project start -->
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <title>Database Project</title>
-        <link rel="stylesheet" type="text/css" href="/index.css">
-    </head>
-    <body>
-        <header>
-            
-        </header>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Database Project</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <header>
+
+    </header>
+    <div>
         <div>
-                <span><%=title[0]%></span>
+            <p style="font-size: 30px; margin: 10px;">
+                검색 결과
+            </p>
         </div>
-    </body>
+        <% for(var i=0; i < number; i++) { %>
+            <div class="result">
+                <!-- 영화 결과 하나씩 출력 -->
+                <div class="result_image">
+                    <img src="<%=image[i]%>">
+                </div>
+                <div class="result_content">
+                    <%=id[i]%> , <%=title[i]%><br />
+                    등급 : <%=movie_rate[i]%><br />
+                    네티즌 평점 : <%=netizen_rate[i]%>/10
+                    (<%=netizen_count[i]%>명)<br />
+                    평론가 평점 : <%=journalist_score[i]%>/10
+                    (<%=journalist_count[i]%>명)<br />
+                    상영 시간 : <%=playing_time[i]%> 분<br />
+                    개봉일 : <%=opening_date[i]%><br />
+                </div>
+            </div>
+            <% } %>
+    </div>
+</body>
+
 </html>
