--- a/index.css
+++ b/index.css
@@ -37,8 +37,8 @@ span{
     border: 1px solid black;
     padding: 2px;
 }
-#select{
-    font-size: 20px;
+.select{
+    font-size: 18px;
     border: 1px solid black;
 }
 #search{
