--- a/index.ejs
+++ b/index.ejs
@@ -22,7 +22,7 @@
             <div class="result">
                 <!-- 영화 결과 하나씩 출력 -->
                 <div class="result_image">
-                    <img src="<%=img[i]%>">
+                    <a href="./movie?id=<%=movie_id[i]%>"><img src="<%=img[i]%>"></a>
                 </div>
                 <div class="result_content">
                     <a href="./movie?id=<%=movie_id[i]%>"><b style="font-size: 20px;"><%=title[i]%></b>(<%=title2[i]%>)</a><br />
