--- a/index.ejs
+++ b/index.ejs
@@ -37,6 +37,7 @@
                     개봉일 : <%=opening_date[i]%><br />
                     등급 : (국내)<%=open_rating_korea[i]%>&nbsp;&nbsp;
                     (해외)<%=open_rating_overseas[i]%>
+                    관객수 : <%=total_count[i]%>명
                 </div>
             </div>
             <% } %>
